--- a/package.json
+++ b/package.json
@@ -1,16 +1,17 @@
 {
   "name": "modhosshate",
   "version": "1.0.0",
-  "description":"",
+  "description": "",
   "main": "index.js",
   "scripts": {
     "start": "node server.js"
   },
   "keywords": [],
-  "author":"",
+  "author": "",
   "license": "ISC",
   "dependencies": {
     "dotenv": "^10.0.0",
+    "firebase": "^9.0.2",
     "nodemon": "^2.0.12",
     "tmi.js": "^1.8.5"
   }
