--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.21.4",
     "dotenv": "^10.0.0",
+    "express": "^4.17.1",
     "firebase": "^9.0.2",
     "nodemon": "^2.0.12",
     "tmi.js": "^1.8.5"
