--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "^4.17.1",
     "firebase": "^9.0.2",
     "nodemon": "^2.0.12",
-    "tmi.js": "^1.8.5"
+    "tmi.js": "^1.8.5",
+    "uuid": "^8.3.2"
   }
 }
