--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.21.4",
+    "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "firebase": "^9.0.2",
-    "nodemon": "^2.0.12",
+    "nodemon": "^2.0.13",
     "tmi.js": "^1.8.5",
     "uuid": "^8.3.2"
   }
