--- a/client/package.json
+++ b/client/package.json
@@ -6,20 +6,23 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "prettier": "npx prettier --write ."
   },
   "dependencies": {
     "axios": "^0.24.0",
     "next": "12.0.7",
     "next-auth": "^4.0.5",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "swr": "^1.1.2-beta.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.0",
     "eslint": "8.4.1",
     "eslint-config-next": "12.0.7",
     "postcss": "^8.2.15",
+    "prettier": "2.5.1",
     "tailwindcss": "^3.0.2"
   }
 }
